--- a/app/src/main/res/layout/dialog_add_goal.xml
+++ b/app/src/main/res/layout/dialog_add_goal.xml
@@ -19,7 +19,8 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Goal name..." />
+            android:hint="Goal name..."
+            android:fontFamily="monospace"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -36,7 +37,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Rep."
-            android:inputType="numberDecimal" />
+            android:inputType="numberDecimal"
+            android:fontFamily="monospace"/>
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
