--- a/app/src/main/res/layout/habit_layout.xml
+++ b/app/src/main/res/layout/habit_layout.xml
@@ -29,10 +29,12 @@
                 android:layout_width="0dp"
                 android:layout_height="30dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="3dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginEnd="10dp"
-                android:layout_marginBottom="3dp"
+                android:layout_marginBottom="15dp"
+                android:fontFamily="monospace"
                 android:text="TextView"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/progressBar"
                 app:layout_constraintStart_toStartOf="parent"
@@ -40,9 +42,11 @@
 
             <ProgressBar
                 android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyleHorizontal"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="0dp"
                 android:layout_height="12dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
                 android:padding="3dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/checkBox"
@@ -53,7 +57,9 @@
                 android:id="@+id/checkBox"
                 android:layout_width="96dp"
                 android:layout_height="0dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginEnd="5dp"
+                android:layout_marginBottom="15dp"
                 android:text="CheckBox"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
