--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#B3E5FC</color>
-    <color name="colorPrimaryDark">#82b3c9</color>
     <color name="colorAccent">#ffe082</color>
-    <color name="colorDark">#424242</color>
+    <color name="colorBackground">#121212</color>
+    <color name="colorPrimary">#CE93D8</color>
+    <color name="actionBarColor">#292c2d</color>
+    <color name="textColorDarkTheme">#ffffff</color>
+
+
+
+    <color name="colorPrimaryLightTheme">#7e57c2</color>
+    <color name="colorSecondaryLightTheme">#4d2c91</color>
+    <color name="colorAccentLightTheme">#0d47a1</color>
+    <color name="colorPrimaryDarkLightTheme">#311b92</color>
 
 
 
