download and UI update fixed with interface and listener

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorAccent">#ffe082</color>
     <color name="colorBackground">#121212</color>
     <color name="colorPrimary">#CE93D8</color>
-    <color name="actionBarColor">#292c2d</color>
+    <color name="actionBarColor">#292C2D</color>
     <color name="textColorDarkTheme">#ffffff</color>
 
 
