--- a/app/src/main/res/layout/goal_preview_dialog.xml
+++ b/app/src/main/res/layout/goal_preview_dialog.xml
@@ -2,17 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:elevation="4dp"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:gravity="center"
+    android:orientation="horizontal">
 
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/habitCard"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_width="290dp"
+        android:layout_height="400dp"
         android:orientation="horizontal"
+        app:cardBackgroundColor="#424242"
         app:cardCornerRadius="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -36,17 +39,16 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
+
             <Button
                 android:id="@+id/button5"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="32dp"
-                android:layout_marginBottom="9dp"
+                android:layout_marginBottom="8dp"
                 android:text="@android:string/cancel"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/button4" />
-
 
             <Button
                 android:id="@+id/button6"
@@ -63,13 +65,12 @@
                 android:id="@+id/checkBox2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="250dp"
-                android:layout_marginEnd="36dp"
-                android:layout_marginBottom="48dp"
+                android:layout_marginStart="88dp"
+                android:layout_marginEnd="88dp"
+                android:layout_marginBottom="44dp"
                 android:text="CheckBox"
                 app:layout_constraintBottom_toTopOf="@+id/button4"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <ProgressBar
@@ -77,22 +78,19 @@
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="100dp"
                 android:layout_height="30dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="36dp"
-                android:layout_marginBottom="139dp"
-                app:layout_constraintBottom_toTopOf="@+id/button5"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.34" />
+                android:layout_marginEnd="88dp"
+                android:layout_marginBottom="34dp"
+                app:layout_constraintBottom_toTopOf="@+id/spinner"
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <Spinner
                 android:id="@+id/spinner"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="136dp"
+                android:layout_marginTop="184dp"
+                android:layout_marginEnd="76dp"
                 android:entries="@array/repeatCycle"
-                app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
-                app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -100,7 +98,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_marginStart="88dp"
-                android:layout_marginTop="84dp"
+                android:layout_marginTop="88dp"
                 app:layout_constraintStart_toStartOf="@+id/button5"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -110,7 +108,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="100dp"
                 android:layout_height="48dp"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="84dp"
                 android:layout_marginTop="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
